<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_an_option"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startLiveActivity"
        android:text="@string/dsp" />

    <Button
        android:id="@+id/buttonBenchmarkActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startTestActivity"
        android:clickable="false"
        android:text="@string/dsp_benchmarking" />

    <Button
        android:id="@+id/buttonStressActivity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startStressActivity"
        android:clickable="false"
        android:text="@string/stress_test" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startAllTestsActivity"
        android:text="@string/run_all_tests" />

</LinearLayout>