<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/toggle_dsp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toggleDSP"
            android:text="@string/toggle_dsp" />

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/dspBlockSizeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioDsp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_1"
                android:checked="true" />
            
            <RadioButton
                android:id="@+id/radioDsp64"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_64" />

            <RadioButton
                android:id="@+id/radioDsp128"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_128" />

            <RadioButton
                android:id="@+id/radioDsp256"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_256" />

            <RadioButton
                android:id="@+id/radioDsp512"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_block_512" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_usage" />

        <ProgressBar
            android:id="@+id/cpu_usage"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_sample_retrieve_time" />

            <TextView
                android:id="@+id/meanSampleRetrieveTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_sample_write_time" />

            <TextView
                android:id="@+id/meanSampleWriteTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_dsp_cycle_time" />

            <TextView
                android:id="@+id/meanDspCycleTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsp_period"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/dspPeriodValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dsp_cycle_time_processing" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/dspCycleBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dsp_cycles" />

        <TextView
            android:id="@+id/dspCyclesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

</LinearLayout>